@startuml
set namespaceSeparator ::

class "spike_v2::src::board::src::stack_item_case::config_builder.dart::ConfigBuilder" {
  +bool Function(StackConfig, StackConfig)? shouldRebuild
  +Widget Function(StackConfig, Widget)? childBuilder
  +Widget child
  +Widget build()
  {static} +Widget withItem()
}

"spike_v2::src::board::src::stack_item_case::config_builder.dart::ConfigBuilder" o-- "null::bool Function(StackConfig, StackConfig)"
"spike_v2::src::board::src::stack_item_case::config_builder.dart::ConfigBuilder" o-- "null::Widget Function(StackConfig, Widget)"
"spike_v2::src::board::src::stack_item_case::config_builder.dart::ConfigBuilder" o-- "flutter::src::widgets::framework.dart::Widget"
"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "spike_v2::src::board::src::stack_item_case::config_builder.dart::ConfigBuilder"

class "spike_v2::src::board::src::stack_item_case::stack_item_case.dart::StackItemCase" {
  +StackItem<StackItemContent> stackItem
  +Widget? Function(StackItem<StackItemContent>)? childBuilder
  +CaseStyle? caseStyle
  +void Function()? onDock
  +void Function()? onDel
  +void Function()? onTap
  +bool? Function(Size)? onSizeChanged
  +bool? Function(Offset)? onOffsetChanged
  +bool? Function(double)? onAngleChanged
  +bool? Function(StackItemStatus)? onStatusChanged
  +Widget Function(StackItemStatus, CaseStyle)? actionsBuilder
  +Widget Function(StackItemStatus)? borderBuilder
  +State<StatefulWidget> createState()
}

"spike_v2::src::board::src::stack_item_case::stack_item_case.dart::StackItemCase" o-- "spike_v2::src::board::src::core::stack_board_item::stack_item.dart::StackItem<StackItemContent>"
"spike_v2::src::board::src::stack_item_case::stack_item_case.dart::StackItemCase" o-- "null::Widget Function(StackItem<StackItemContent>)"
"spike_v2::src::board::src::stack_item_case::stack_item_case.dart::StackItemCase" o-- "spike_v2::src::board::src::core::case_style.dart::CaseStyle"
"spike_v2::src::board::src::stack_item_case::stack_item_case.dart::StackItemCase" o-- "null::void Function()"
"spike_v2::src::board::src::stack_item_case::stack_item_case.dart::StackItemCase" o-- "null::bool Function(Size)"
"spike_v2::src::board::src::stack_item_case::stack_item_case.dart::StackItemCase" o-- "null::bool Function(Offset)"
"spike_v2::src::board::src::stack_item_case::stack_item_case.dart::StackItemCase" o-- "null::bool Function(double)"
"spike_v2::src::board::src::stack_item_case::stack_item_case.dart::StackItemCase" o-- "null::bool Function(StackItemStatus)"
"spike_v2::src::board::src::stack_item_case::stack_item_case.dart::StackItemCase" o-- "null::Widget Function(StackItemStatus, CaseStyle)"
"spike_v2::src::board::src::stack_item_case::stack_item_case.dart::StackItemCase" o-- "null::Widget Function(StackItemStatus)"
"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "spike_v2::src::board::src::stack_item_case::stack_item_case.dart::StackItemCase"

class "spike_v2::src::board::src::stack_item_case::stack_item_case.dart::_StackItemCaseState" {
  +Offset centerPoint
  +Offset startGlobalPoint
  +Offset startOffset
  +Size startSize
  +double startAngle
  +Alignment? startAlignment
  +double endDx
  +double endDy
  +Offset dragOffset
  +int itemIndex
  +HomeRepo homeRepo
  +String itemId
  -StackBoardController _controller()
  -CaseStyle _caseStyle()
  -double _minSize()
  +void initState()
  -MouseCursor _cursor()
  -void _onTap()
  -void _onEdit()
  -void _onPanStart()
  -void _onPanEnd()
  -void _onPanUpdate()
  -void _onMoveKeyUpdate()
  -void _onScaleUpdate()
  -void _onResizeXYUpdate()
  -void _onRotateUpdate()
  +Widget build()
  -Widget _childrenStack()
  -Widget _content()
  -Widget _frameBorder()
  -Widget _deleteHandle()
  -Widget _mergeTileHandle()
  -Widget _scaleHandle()
  -Widget _resizeHandle()
  -Widget _rotateAndMoveHandle()
  -Widget _toolCase()
}

"spike_v2::src::board::src::stack_item_case::stack_item_case.dart::_StackItemCaseState" o-- "dart::ui::Offset"
"spike_v2::src::board::src::stack_item_case::stack_item_case.dart::_StackItemCaseState" o-- "dart::ui::Size"
"spike_v2::src::board::src::stack_item_case::stack_item_case.dart::_StackItemCaseState" o-- "flutter::src::painting::alignment.dart::Alignment"
"spike_v2::src::board::src::stack_item_case::stack_item_case.dart::_StackItemCaseState" o-- "spike_v2::src::repo::home_repo.dart::HomeRepo"
"flutter::src::widgets::framework.dart::State" <|-- "spike_v2::src::board::src::stack_item_case::stack_item_case.dart::_StackItemCaseState"


@enduml
